# gpg_remote

./: CMakeLists.txt  LICENSE  gpg_remote_controller.xml  gpg_remote_hw_plugin.xml  package.xml
cfg/: amcl_params.yaml  base_local_planner_params.yaml  common_costmap_params.yaml  gpg_remote.yaml  l429.pgm  rpi_camera.yaml  teleop.rviz
config/: camera.yaml  controllers.yaml  gopigo3.urdf
gpg_remote/: CMakeLists.txt  LICENSE  gpg_remote_hardware.xml  package.xml
gpg_remote/config/: camera.yaml  controllers.yaml  gopigo3.urdf
gpg_remote/include/gpg_remote/: gpg_remote_broadcaster.hpp
gpg_remote/launch/: gpg.launch.py
gpg_remote/scripts/: camera_info_publisher  fake_data_server  fake_depth_publisher  image_publisher  model_state_to_pose  setvel  teleop
gpg_remote/share/: data_server.py  gpg_close.m  gpg_open_camera.m  gpg_read.m  gpg_readwrite.m  gpg_write.m  image_server.py
gpg_remote/src/: gpg_remote_broadcaster.cpp  gpg_remote_hw.cpp
gpg_remote_msgs/: CMakeLists.txt  package.xml
gpg_remote_msgs/msg/: State.msg
include/gpg_remote/: gpg_remote_broadcaster.hpp  gpg_remote_hw.h  gpg_remote_hw.hpp
launch/: gpg.launch.py  gpg_remote.launch  navigation.launch  teleop.launch
msg/: State.msg
scripts/: camera_info_publisher  fake_depth_publisher  get_battery  image_publisher  model_state_to_pose.py  teleop
share/: data_server.py  fake_data_server.py  gpg_open.m  gpg_read.m  gpg_read_camera.m  gpg_write.m  image_server.py  matlab_server.py  servers.py
src/: gpg_remote_broadcaster.cpp  gpg_remote_hw.cpp  gpg_remote_node.cpp
