<?xml version="1.0"?>
<package format="3">
  <name>gpg_remote</name>
  <version>0.0.0</version>
  <description>ROS interface to remote Dexter Industries GoPiGo3</description>
  <maintainer email="wouter@caarls.org">Wouter Caarls</maintainer>
  <author email="wouter@caarls.org">Wouter Caarls</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>cv_bridge</depend>
  <depend>gpg_remote_msgs</depend>
  
  <build_depend>pluginlib</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
